# API_FAStAPI

./: data.py  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  schema.py  test.py
.github/workflows/: main.yml
