[tool.poetry]
name = "api-fastapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
uvicorn = "^0.27.0.post1"
taskipy = "^1.12.2"
pytest = "^8.0.0"
httpx = "^0.26.0"
pandas = "^2.2.0"
pyhive = "^0.7.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]

run = "uvicorn main:app --reload" 
test = "pytest -y"
kill = "kill -9 $(lsof -t -i:8000)"